--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -1,6 +1,11 @@
-.container{
-    float: left;
-    background-color: white;
-    height: 100vh;
-    width: 15vw;
+.container {
+  float: left;
+  background-color: white;
+  height: 100vh;
+  width: 15vw;
+}
+
+.li {
+  cursor: pointer;
+  margin-left: 2rem;
 }
