modified:   src/components/clientAdd.tsx 	modified:   src/components/sidebar.tsx 	modified:   src/pages/clients/index.tsx 	modified:   src/styles/ClientAdd.module.css 	modified:   src/styles/Sidebar.module.css

--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -5,7 +5,25 @@
   width: 15vw;
 }
 
-.li {
-  cursor: pointer;
+.li,
+.h3 {
   margin-left: 2rem;
+  list-style-type: none;
+
+  margin: 0;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.li {
+  padding-left: 3rem;
+}
+
+.li:hover,
+.h3:hover {
+  background-color: #f1f1f1;
+}
+
+.display {
+  display: none;
 }
