--- a/src/styles/ClientAdd.module.css
+++ b/src/styles/ClientAdd.module.css
@@ -16,3 +16,16 @@
   display: flex;
   flex-direction: column;
 }
+
+.back {
+  font-size: 2rem;
+  position: absolute;
+  top: 10rem;
+  left: 30rem;
+  cursor: pointer;
+  color: rgb(33, 87, 190);
+}
+
+.back:hover {
+  color: #ff0000;
+}
