modified:   src/components/clientList.tsx 	new file:   src/components/clientView.tsx 	modified:   src/components/sidebar.tsx 	modified:   src/pages/clients/index.tsx 	modified:   src/styles/Array.module.css 	modified:   src/styles/ClientAdd.module.css 	new file:   src/styles/ClientView.module.css 	modified:   src/styles/globals.css

--- a/src/styles/Array.module.css
+++ b/src/styles/Array.module.css
@@ -36,7 +36,7 @@
   background-color: white;
 }
 
-.tr:hover {
+.tr:hover td:not(:last-child):not(:nth-last-child(2)) {
   background-color: grey;
   color: white;
 }
