modified:   src/components/clientList.tsx 	modified:   src/styles/Array.module.css

--- a/src/styles/Array.module.css
+++ b/src/styles/Array.module.css
@@ -40,3 +40,10 @@
   background-color: grey;
   color: white;
 }
+
+#search{
+  display: block;
+  text-align: center;
+  margin: auto;
+  margin-top: 2rem;
+}
