--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  user-select: none;
 }
 
 body {
@@ -104,6 +105,10 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+h1{
+  cursor: pointer;
 }
 
 h2 {
