new file:   public/vignetteClientList.png 	modified:   src/pages/index.tsx 	modified:   src/styles/Home.module.css

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,3 +5,14 @@
 .array_container{
   margin-top: 5rem;
 }
+
+.vignette{
+  border: 1px solid #000;
+  margin-left: 2rem;
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+.vignette:hover{
+  transform: scale(1.1);
+}
