--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,44 +1,67 @@
-.container{
-    color: white;
-    width: 100%;
-    display: flex;
-    align-items:center;
-    justify-content: space-between;
-    background-color:rgb(33, 87, 190);
-    border-bottom: 1px solid black;
-    padding: 1em;
-    user-select: none;
+.container {
+  color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(33, 87, 190);
+  border-bottom: 1px solid black;
+  padding: 1em;
+  user-select: none;
 }
 
-.container_sous_menu{
-    display: flex;
-    list-style-type: none
+.container_sous_menu {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
 }
 
-.container_sous_menu>li{
-    margin-right: 50px;
-    cursor: pointer;
-    user-select: none;
-    font-size: 1.5rem;
-    flex-shrink: 0;
+.container_sous_menu p {
+  margin-right: 1rem;
+  cursor: pointer;
+}
 
+.container_sous_menu p:last-child:hover {
+  text-decoration: underline;
+}
+
+.container_sous_menu > li {
+  margin-right: 50px;
+  cursor: pointer;
+  user-select: none;
+  font-size: 1.5rem;
+  flex-shrink: 0;
 }
 
 .container_sous_menu > li > span {
-    width: 1.2em; /* ajustez la largeur en fonction de la taille de l'icône */
-    height: 1.2em; /* ajustez la hauteur en fonction de la taille de l'icône */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 0.5em; /* ajustez la marge en fonction de vos préférences */
-  }
-  
-
-.container_sous_menu>li:hover{
-    color: black;
-    text-decoration:underline;
+  width: 1.2em; /* ajustez la largeur en fonction de la taille de l'icône */
+  height: 1.2em; /* ajustez la hauteur en fonction de la taille de l'icône */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.5em; /* ajustez la marge en fonction de vos préférences */
 }
 
-.logo{
-    border-radius: 10px;
+.container_sous_menu > li:hover:not(.username) {
+  color: black;
+  text-decoration: underline;
+}
+
+.logo {
+  border-radius: 10px;
+}
+
+.username {
+  font-size: 1rem;
+  color: black;
+  border: 1px solid black;
+  background-color: aliceblue;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+.username:hover {
+  background-color: rgb(33, 87, 190);
+  color: white;
+  text-decoration: none;
 }
