modified:   src/components/client/clientAdd.tsx 	modified:   src/components/client/orderAdd.tsx 	modified:   src/components/client/orderList.tsx 	modified:   src/components/client/productAdd.tsx 	modified:   src/components/server/Commande/ContenueQuery.js     modified:   src/pages/statistiques/doughnutChart.tsx 	modified:   src/pages/statistiques/index.tsx 	modified:   src/pages/statistiques/polarArea.tsx 	modified:   src/pages/statistiques/stackBarChart.tsx 	modified:   src/styles/ClientAdd.module.css 	modified:   src/styles/Connexion.module.css 	modified:   src/styles/globals.css

--- a/src/styles/ClientAdd.module.css
+++ b/src/styles/ClientAdd.module.css
@@ -29,3 +29,11 @@
 .back:hover {
   color: white;
 }
+
+.input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
