--- a/src/styles/Connexion.module.css
+++ b/src/styles/Connexion.module.css
@@ -40,7 +40,7 @@
 }
 
 .input {
-  line-height: 1.8rem;
+  line-height: 2.5rem;
   border: 1px solid black;
   margin-top: 5px;
   padding-left: 10px;
@@ -60,10 +60,12 @@
   color: white;
   cursor: pointer;
   border: 0.1ps solid black;
+  border-radius: 10px;
 }
 
 .btncontainer {
   position: relative;
   display: flex;
   justify-content: space-around;
+  margin-top: 2rem;
 }
